--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         "bezhansalleh/filament-shield": "^3.3",
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.3.0",
+        "kanuni/filament-cards": "^0.2.1",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "pxlrbt/filament-spotlight": "^1.3",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
@@ -19,6 +21,7 @@
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
+        "lucascudo/laravel-pt-br-localization": "^3.0",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^11.0.1"
